--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -7,7 +7,7 @@
 @import 'sprite';
 @import 'base';
 @import 'inner';
-// @import 'news';
+@import 'news';
 @import 'homepage';
 @import 'mobmenu';
 @import 'slick';
