--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'news';
 @import 'homepage';
 @import 'mobmenu';
+@import 'contacts';
 @import 'slick';
 @import 'slick-theme';
 // @import 'cart';
