--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -14,3 +14,6 @@ $color13:#c2ced2;
 $color14:#00feee;
 $color15:#5c6d72;
 $color16:#00dbce;
+$color17:#00c1b5;
+$color18:#00d1c5;
+$color19:#bdcaca;
