--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -11,6 +11,7 @@
 @import 'homepage';
 @import 'mobmenu';
 @import 'contacts';
+@import 'about';
 @import 'slick';
 @import 'slick-theme';
 // @import 'cart';
