--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -174,6 +174,10 @@ em strong
 }
 
 
+.text-center{
+	text-align: center;
+}
+
 .form-control {
    border: 1px solid $color3;
    border-radius: 0;
