--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -34,6 +34,10 @@
 	align-items: center
 }
 
+.justify-content-between{
+	justify-content: space-between;
+}
+
 .justify-content-end{
 	justify-content: flex-end;
 }
