--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -53,9 +53,9 @@
 		color: $color2;
 		font-family: 'proxima_novablack_italic';
 		font-size: 4rem;
-		letter-spacing: .1em;
+		letter-spacing: .05em;
 		position: relative;
-		padding-bottom: 4rem;
+		padding-bottom: 2.5rem;
 		margin-bottom: 5.5rem;
 		text-transform: uppercase;
 		&:after{
@@ -199,5 +199,111 @@
 
 // =coverage
 .coverage{
+	$color1: #00b4a9;
+	$color2: #e3e3e3;
+	$color3: #0068b4;
+	$color4: #955faa;
 	padding: 10rem 0;
+
+	&__signature{
+		font-size: 1.6rem;
+		color: $color2;
+		margin-top: 5rem;
+		.color1{
+			.circle{
+				background-color: $color1;
+			}
+		}
+		.color2{
+			.circle{
+				background-color: $color2;
+			}
+		}
+		.color3{
+			.circle{
+				background-color: $color3;
+			}
+		}
+		.color4{
+			.circle{
+				background-color: $color4;
+			}
+		}
+
+
+		.circle{
+			$s: 30px;
+			border-radius: 50%;
+			height: $s;
+			margin-right: 1.1rem;
+			width: $s;
+		}
+	}
+
+	.signature{
+		&__item{
+			display: flex;
+			align-items: center;
+			margin-right: 4.2rem;
+			&:last-child{
+				margin-right: 0;
+			}
+		}
+	}
+
+
+	&__row{
+		display: flex;
+		margin-bottom: 4.3rem;
+	}
+
+	&__title{
+		font-size: 1.6rem;
+		text-transform: uppercase;
+		text-align: right;
+		display: flex;
+		flex-direction: column;
+		justify-content: center
+	}
+	.columns{
+		height: 36px;
+		margin-left: 1.7rem;
+		margin-right: 9.5rem;
+		position: relative;
+	}
+
+	.over{
+		background: url(../images/columns.png) repeat-x;
+		position: absolute;
+		width: 100%;
+		z-index: 10;
+		height: 36px;
+	}
+
+	.column{
+		position: absolute;
+		bottom: 0;
+		height: 100%;
+		z-index: 0;
+		&-color1{background-color: $color1}
+		&-color2{background-color: $color2}
+		&-color3{background-color: $color3}
+		&-color4{background-color: $color4}
+	}
+}
+
+.dots{
+	position: absolute;
+	top: -31px;
+	width: 100%;
+	.dot{
+		background: url(../images/dot.png) no-repeat center bottom;
+		color: #616f74;
+		font-size: 1.1rem;
+		height: 24px;
+		padding-bottom: 37px;
+		position: absolute;
+		width: 24px;
+		z-index: 15;
+	}
 }
