--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -38,6 +38,11 @@
 	justify-content: space-between;
 }
 
+.justify-content-center{
+	justify-content: center;
+}
+
+
 .justify-content-end{
 	justify-content: flex-end;
 }
