--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'mobmenu';
 @import 'contacts';
 @import 'about';
+@import 'catalog';
 @import 'slick';
 @import 'slick-theme';
 // @import 'cart';
